--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ Version:	1.1
 html {
 	scroll-behavior: smooth;
   }
+  html {
+	scroll-padding-top: 100px; /* Equal to navbar height */
+  }
+  
   
 body{
     font-family: 'Poppins', sans-serif;
